mobile alignment fixed

--- a/styles/components/main-button.css
+++ b/styles/components/main-button.css
@@ -5,6 +5,7 @@
   padding: 12px;
   display: block;
   max-width: 363px;
+  width: 100%;
   text-align: center;
   border-radius: 5px;
   margin-top: 56px;
